src/objects/TR1__Saved_Search__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Report__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; $Label.tr1__saved_search_contact_link_report &amp;&quot;?pv0=&quot;&amp; Name , &quot;Report&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Search_Name__c</fullName>
        <label>Search Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <label>Resume Search(Deprecated)</label>
    <nameField>
        <displayFormat>SS-{0000}</displayFormat>
        <label>Saved Search Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resume Searches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>